k3s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: malware-analysis
  labels:
    app: malware-analysis
