k3s/worker-dynamic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-dynamic
  namespace: malware-analysis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker-dynamic
  template:
    metadata:
      labels:
        app: worker-dynamic
    spec:
      containers:
        - name: worker-dynamic
          image: dockerhubmalware/malware-worker-dynamic:v1.0.7
          # Injection de toutes les variables d'environnement depuis le secret
          volumeMounts:
            - name: results
              mountPath: /data/results
      volumes:
        - name: results
          persistentVolumeClaim:
            claimName: results-pvc
