k3s/worker-static-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-static
  namespace: malware-analysis
spec:
  replicas: 2
  selector:
    matchLabels:
      app: worker-static
  template:
    metadata:
      labels:
        app: worker-static
    spec:
      containers:
        - name: worker-static
          image: dockerhubmalware/malware-worker-static:v1.0.3
          # Injection de toutes les variables d'environnement depuis le secret
          volumeMounts:
            - name: results
              mountPath: /data/results
            - name: yara-rules
              mountPath: /yara-rules
      volumes:
        - name: results
          persistentVolumeClaim:
            claimName: results-pvc
        - name: yara-rules
          emptyDir: {}
