k3s/api-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: malware-analysis
spec:
  selector:
    app: api
  type: LoadBalancer
  ports:
    - name: http
      port: 8000
      targetPort: 8000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: malware-analysis
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: dockerhubmalware/malware-api:v11.2.3
          imagePullPolicy: Always
          # Injection de toutes les variables d'environnement depuis le secret
          volumeMounts:
            - name: results
              mountPath: /data/results
          ports:
            - containerPort: 8000
      volumes:
        - name: results
          persistentVolumeClaim:
            claimName: results-pvc
