k3s/sandbox-controller-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: sandbox-controller
  namespace: malware-analysis
spec:
  selector:
    app: sandbox-controller
  ports:
    - name: http
      port: 9000
      targetPort: 9000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sandbox-controller
  namespace: malware-analysis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sandbox-controller
  template:
    metadata:
      labels:
        app: sandbox-controller
    spec:
      hostPID: true   # pour parler à l’hyperviseur de la machine hôte
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: sandbox-controller
          image: dockerhubmalware/malware-sandbox-controller:v1.2.9
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: results
              mountPath: /data/results
      volumes:
        - name: results
          persistentVolumeClaim:
            claimName: results-pvc
