k3s/sandbox-controller-packer.yaml
apiVersion: v1
kind: Service
metadata:
  name: sandbox-controller-packer
  namespace: malware-analysis
spec:
  selector:
    app: sandbox-controller-packer
  ports:
    - name: http
      port: 9000
      targetPort: 9000
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sandbox-controller-packer
  namespace: malware-analysis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sandbox-controller-packer
  template:
    metadata:
      labels:
        app: sandbox-controller-packer
    spec:
      hostPID: true
      hostNetwork: true   # nécessaire pour libvirt / virsh
      dnsPolicy: ClusterFirstWithHostNet

      containers:
        - name: sandbox-controller-packer
          image: dockerhubmalware/malware-sandbox-controller-packer:v1.0.0
          imagePullPolicy: Always

          securityContext:
            privileged: true

          ports:
            - containerPort: 9000

          volumeMounts:
            # accès aux scripts d’analyse
            - name: analysis
              mountPath: /analysis

            # accès à libvirt
            - name: libvirt-run
              mountPath: /var/run/libvirt

            - name: libvirt-lib
              mountPath: /var/lib/libvirt

            # tmp pour samples
            - name: tmp
              mountPath: /tmp

      volumes:
        # scripts + logs
        - name: analysis
          hostPath:
            path: /analysis
            type: Directory

        # sockets libvirt
        - name: libvirt-run
          hostPath:
            path: /var/run/libvirt
            type: Directory

        - name: libvirt-lib
          hostPath:
            path: /var/lib/libvirt
            type: Directory

        # tmp partagé
        - name: tmp
          hostPath:
            path: /tmp
            type: Directory
